# embed

./: .gitignore  CMakeLists.txt  README.MD  install.ps1  run_benchmark.py  uninstall.ps1
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.ps1  benchmark_results.m
example/: nmea.txt
example/subdirectory/: subdir_file.txt
make/vs141/: embed.sln
make/vs141/embed/: embed.vcxproj  embed.vcxproj.filters
make/vs141/test/: test.vcxproj  test.vcxproj.filters
src/: CMakeLists.txt  embed.hpp  main.cpp  resource.hpp  saver.hpp  span.hpp
src/test/: resource.hpp  resource_holder.hpp  span.hpp  test.cpp
test/: CMakeLists.txt  CMakeLists.txt.in  test.cpp
